<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".RegisterActivity">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="44dp"
            android:layout_height="38dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="155dp"
            android:layout_marginRight="155dp"
            android:layout_marginBottom="472dp"
            android:contentDescription="@string/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.075"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.021"
            app:srcCompat="@drawable/dog"
            tools:srcCompat="@drawable/dog" />

        <TextView
            android:id="@+id/txtAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="664dp"
            android:contentDescription="@string/app_name"
            android:text="@string/app_name"
            android:textSize="26sp"
            android:theme="@style/inputColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgLogo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/app_name" />

        <EditText
            android:id="@+id/eTxtNombres"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="98dp"
            android:layout_marginLeft="98dp"
            android:layout_marginTop="49dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="570dp"
            android:autofillHints="@string/empty"
            android:theme="@style/inputColor"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="text"
            android:text="@string/empty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.436"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAppName"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/eTxtApellidos"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="98dp"
            android:layout_marginLeft="98dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="570dp"
            android:autofillHints="@string/empty"
            android:theme="@style/inputColor"
            android:ems="10"
            android:hint="@string/apellidos"
            android:inputType="text"
            android:text="@string/empty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eTxtNombres"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/eTxtCorreo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="98dp"
            android:layout_marginLeft="98dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="570dp"
            android:autofillHints="@string/empty"
            android:theme="@style/inputColor"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:text="@string/empty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eTxtApellidos"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/eTxtTelefono"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="98dp"
            android:layout_marginLeft="98dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="570dp"
            android:autofillHints="@string/empty"
            android:theme="@style/inputColor"
            android:ems="10"
            android:hint="@string/telefono"
            android:inputType="phone"
            android:text="@string/empty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eTxtCorreo"
            app:layout_constraintVertical_bias="0.0" />

        <Spinner
            android:id="@+id/spnPreferencia"
            android:layout_width="310dp"
            android:layout_height="40dp"
            android:layout_marginStart="98dp"
            android:layout_marginLeft="98dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="570dp"
            android:entries="@array/preferencias"
            android:prompt="@string/preferencia"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eTxtTelefono"
            app:layout_constraintVertical_bias="0.0"></Spinner>

        <EditText
            android:id="@+id/eTxtResumen"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="98dp"
            android:layout_marginLeft="98dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="570dp"
            android:autofillHints="@string/empty"
            android:theme="@style/inputColor"
            android:ems="10"
            android:hint="@string/resumen"
            android:inputType="textMultiLine"
            android:lines="5"
            android:text="@string/empty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spnPreferencia"
            app:layout_constraintVertical_bias="0.0" />

        <CheckBox
            android:id="@+id/cbCorreos"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="157dp"
            android:layout_marginLeft="157dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="158dp"
            android:layout_marginRight="158dp"
            android:layout_marginBottom="418dp"
            android:text="@string/recibircorreos"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eTxtResumen"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginStart="148dp"
            android:layout_marginLeft="148dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="149dp"
            android:layout_marginRight="149dp"
            android:layout_marginBottom="190dp"
            android:background="@drawable/custom_button"
            android:text="@string/registrarse"
            android:onClick="sendForm"
            android:textColor="#FFF"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cbCorreos"
            app:layout_constraintVertical_bias="0.0" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>